Fixed menu option gap in Android

--- a/jquery.ez.menu.css
+++ b/jquery.ez.menu.css
@@ -28,7 +28,7 @@ ul.ez_menu {
 ul.ez_menu li{
 	float: left;
 	font-weight: bold;
-	padding: 8px 12px 4px 12px;
+	padding: 8px 12px 6px 12px;
 	position: relative;
 	z-index: 10;
 }
